--- a/index.html
+++ b/index.html
@@ -49,18 +49,44 @@
                     </p>
 
                     <div class="hero_content-btns">
-                        <input type="text" placeholder="    Enter your email…">
+                        <input type="text" placeholder="Enter your email…">
                         <button>Get Started</button>
                     </div>
                 </div>
                 <div class="hero_image">
-                    <img src="assets/image/main_image.svg" 
+                    <img src="assets/image/main1_image.svg" 
                     alt="Your browser don't support this image"> 
                 </div>
             </div>
           </section>
         </div>
     </header>
+
+
+    <main class="productive">
+        <div class="productive_backgroud">
+            <div class="row">
+                <div class="productive_content">
+                    <h1>Stay productive, wherever you are</h1>
+                    <p>Never let location be an issue when accessing your files.
+                         Fylo has you covered for all of your file storage needs.</p>
+
+                    <p>Securely share files and folders with friends, 
+                    family and colleagues for live collaboration. No email attachments required!</p>
+
+                </div>
+                <div class="productive_image">
+                    <img src="./assets/image/people_image.svg" 
+                    alt="Your browser don't support this image">
+                </div>
+    
+            </div>
+        </div>
+       
+    </main>
+
+
+
     <footer></footer>
 </body>
 </html>
