add footer section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,82 @@
            </div>
         </div>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <div class="footer_cta">
+            <div class="container">
+                <div class="row">
+                    <div class="footer_cta_content">
+                        <h2>Get early access today</h2>
+                        <p>It only takes a minute to sign up and our free starter tier is <br> extremely generous.
+                             If you have any questions, our support team <br> would be happy to help you.</p>
+                    </div>
+                        <form action="#" class="footer_cta_btns">
+                            <input name="" type="text" placeholder="email@example.com">
+                            <button>Get Started For Free</button>
+                        </form>
+                </div>
+            </div>
+        </div>
+        <section class="sector_footer">
+            <div class="container">
+                <div class="footer_content">
+                    <div class="footer_logo">
+                        <a href="index.html">
+                            <img src="./assets/image/footer_logo4.svg" alt="Your browser don't support this image">
+                        </a>
+                    </div>
+    
+                    <div class="footer_menu">
+                        <div class="contacts">
+                            <div class="phone_number">
+                                    <a href="#">
+                                        <i class="fa fa-volume-control-phone" aria-hidden="true"></i>
+                                        Phone: +1-543-123-4567
+                                    </a>
+                            </div>
+                            <div class="email">
+                                <a href="#">
+                                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                                    example@fylo.com
+                                </a>
+                            </div>
+                        </div>
+                        <div class="about_us">
+                            <ul>
+                                <li><a href="#">About Us</a></li>
+                                <li><a href="#">Jobs</a></li>
+                                <li><a href="#">Press</a></li>
+                                <li><a href="#">Blog</a></li>
+                            </ul>
+                        </div>
+                        <div class="contact_us">
+                            <ul>
+                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="#">Terms</a></li>
+                                <li><a href="#">Privacy</a></li>                         
+                            </ul>
+                        </div>
+                        <div class="social_networks">
+                            <div class="facebook">
+                                <a href="">
+                                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                            <div class="twitter">
+                                <a href="">
+                                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                                </a>
+                            </div>
+                            <div class="imstagtam">
+                                <a href="">
+                                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                                </a>    
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
