Changed css and html: Removed all positions

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h1 class="text1">All your files in one secure </h1>
                     <h1>location, accessible anywhere.</h1>
                     <p>Fylo stores your most important files in one secure location. 
-                        Access <br> them wherever you need, share and collaborate with friends, family, <br> and co-workers.
+                        Access  them wherever you need, share and collaborate with friends, family,  and co-workers.
                     </p>
                     <form action="#" class="hero_content-btns">
                         <input name="" type="text" placeholder="Enter your email…">
@@ -70,10 +70,10 @@
                 <div class="productive_content">
                     <h2>Stay productive, wherever you are</h2>
                     <p class="text2">Never let location be an issue when accessing your files.
-                         Fylo has you <br> covered for all of your file storage needs.</p>
+                         Fylo has you  covered for all of your file storage needs.</p>
                          
                     <p>Securely share files and folders with friends, 
-                    family and colleagues for <br> live collaboration. No email attachments required!</p>
+                    family and colleagues for  live collaboration. No email attachments required!</p>
                    <div class="productive_btns">
                     <a href="#">See how Fylo works</a>
                     <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
@@ -102,24 +102,32 @@
             </div>
            </div>
         </div>
-    </main>
-    <footer class="footer">
-        <div class="footer_cta">
+
+        <section class="signIn">
             <div class="container">
                 <div class="row">
-                    <div class="footer_cta_content">
-                        <h2>Get early access today</h2>
-                        <p>It only takes a minute to sign up and our free starter tier is <br> extremely generous.
-                             If you have any questions, our support team <br> would be happy to help you.</p>
+                    <div class="signIn_content">
+                        <h3>Get early access today</h3>
+                        <p>
+                            It only takes a minute to sign up and our free starter tier is  extremely generous.
+                             If you have any questions, our support team  would be happy to help you.
+                        </p>
                     </div>
-                        <form action="#" class="footer_cta_btns">
-                            <input name="" type="text" placeholder="email@example.com">
+                    <div class="signIn_btns">
+                        <form action="#">
+                            <input name="" type="text" placeholder="email@example.com" >
                             <button>Get Started For Free</button>
                         </form>
+                    </div>
                 </div>
             </div>
-        </div>
-        <section class="sector_footer">
+    </section>
+
+    </main>
+
+
+    <footer>
+        <section class="footer">
             <div class="container">
                 <div class="footer_content">
                     <div class="footer_logo">
@@ -128,17 +136,21 @@
                         </a>
                     </div>
     
-                    <div class="footer_menu">
+                    <div class="row">
                         <div class="contacts">
                             <div class="phone_number">
                                     <a href="#">
-                                        <i class="fa fa-volume-control-phone" aria-hidden="true"></i>
+                                        <div class="phone_icon">
+                                            <i class="fa fa-volume-control-phone" aria-hidden="true"></i>
+                                        </div>                        
                                         Phone: +1-543-123-4567
                                     </a>
                             </div>
                             <div class="email">
                                 <a href="#">
-                                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                                    <div>
+                                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                                    </div>                                   
                                     example@fylo.com
                                 </a>
                             </div>
@@ -159,17 +171,17 @@
                             </ul>
                         </div>
                         <div class="social_networks">
-                            <div class="facebook">
+                            <div>
                                 <a href="">
                                     <i class="fa fa-facebook" aria-hidden="true"></i>
                                 </a>
                             </div>
-                            <div class="twitter">
+                            <div>
                                 <a href="">
                                     <i class="fa fa-twitter" aria-hidden="true"></i>
                                 </a>
                             </div>
-                            <div class="imstagtam">
+                            <div>
                                 <a href="">
                                     <i class="fa fa-instagram" aria-hidden="true"></i>
                                 </a>    
@@ -180,5 +192,8 @@
             </div>
         </section>
     </footer>
+
+
+
 </body>
 </html>
